--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="white">#ffffffff</color>
 
+    <!-- adding to todo list - change primary, primarydark colors according to the changed background -->
+
     <color name="black_overlay">#66000000</color>
 </resources>
