--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -32,17 +32,20 @@
 
         <TextView
             android:id="@+id/event_name"
-            android:layout_marginTop="6dp"
             android:layout_width="match_parent"
-            android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
             android:layout_height="wrap_content"
-            android:text="event_name" />
+            android:layout_marginTop="6dp"
+            android:autoText="false"
+            android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
+            android:text="event_name"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/event_place"
+            android:id="@+id/event_date"
             android:layout_width="match_parent"
-            android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
             android:layout_height="wrap_content"
+            android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
             android:text="event_place" />
 
         <TextView
