--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,14 +9,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin">
+        android:layout_marginBottom="5dp"
+        android:layout_weight="2"
+        android:orientation="vertical">
 
 
         <ImageView
-            android:layout_width="match_parent"
+            android:id="@+id/imageView"
+            android:layout_width="200dp"
             android:layout_height="match_parent"
+            android:layout_gravity="center_vertical|center_horizontal"
             android:scaleType="fitXY"
             app:srcCompat="@drawable/notavailable" />
     </LinearLayout>
@@ -26,8 +27,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="vertical"
-        android:background="@color/white">
+        android:background="@color/white"
+        android:isScrollContainer="false"
+        android:measureWithLargestChild="false"
+        android:orientation="vertical">
 
 
         <TextView
@@ -36,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
             android:autoText="false"
-            android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
+            android:gravity="center_horizontal"
             android:text="event_name"
             android:textSize="24sp"
             android:textStyle="bold" />
@@ -46,20 +49,50 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
-            android:text="event_place" />
+            android:paddingTop="8dip"
+            android:text="event_date" />
 
         <TextView
             android:id="@+id/event_time"
             android:layout_width="match_parent"
-            android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
             android:layout_height="wrap_content"
+            android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
             android:text="event_time" />
+
+        <TextView
+            android:id="@+id/event_location"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
+            android:text="event_location" />
+
+        <TextView
+            android:id="@+id/event_category"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
+            android:text="event_category" />
+
+        <TextView
+            android:id="@+id/event_price"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
+            android:text="event_price" />
+
+        <TextView
+            android:id="@+id/event_price2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="Description"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/event_description"
             android:layout_width="match_parent"
-            android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
             android:layout_height="wrap_content"
+            android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
             android:text="event_description" />
 
     </LinearLayout>
