--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,4 +29,11 @@
         <item name="android:background">@color/black_overlay</item>
     </style>
 
+    <style name="AppTheme.SliderTheme">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+
+    </style>
+
+
 </resources>
