--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,9 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="white">#ffffffff</color>
+    <color name="colorYellow">#FFFF00</color>
+    <color name="colorBlack">#000000</color>
+
 
     <!-- adding to todo list - change primary, primarydark colors according to the changed background -->
 
