--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -4,30 +4,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="@dimen/activity_vertical_margin">
+    android:padding="5dp">
+
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="match_parent"
         android:layout_marginBottom="5dp"
         android:layout_weight="2"
-        android:orientation="vertical">
+        android:orientation="horizontal"
+        android:layout_gravity="center_horizontal"
+        >
 
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center_vertical|center_horizontal"
             android:scaleType="fitXY"
             app:srcCompat="@drawable/notavailable" />
+
+
     </LinearLayout>
 
     <LinearLayout
+
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="fill_parent"
         android:layout_weight="1"
-        android:background="@color/white"
+        android:background="@drawable/event_background"
         android:isScrollContainer="false"
         android:measureWithLargestChild="false"
         android:orientation="vertical">
@@ -38,11 +43,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
-            android:autoText="false"
             android:gravity="center_horizontal"
             android:text="event_name"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:fontFamily="sans-serif-condensed"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:textColor="@color/colorBlack"
+            />
 
         <TextView
             android:id="@+id/event_date"
