--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="white">#ffffffff</color>
     <color name="colorYellow">#FFFF00</color>
     <color name="colorBlack">#000000</color>
-
+    <color name="colorLightBlue">#B3E4F5</color>
 
     <!-- adding to todo list - change primary, primarydark colors according to the changed background -->
 
