--- a/app/src/main/res/drawable/white_border.xml
+++ b/app/src/main/res/drawable/white_border.xml
@@ -5,7 +5,7 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="#fff"/>
-            <corners android:radius="5dp"/>
+            <corners android:radius="5dip"/>
         </shape>
     </item>
 
