--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -1,7 +1,4 @@
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/HomeScreenMainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -125,7 +122,7 @@
                     android:layout_centerInParent="true"
                     android:layout_gravity="center"
                     android:clickable="false"
-                    android:text="places"
+                    android:text="things to do"
                     android:textColor="#ffffff"
                     android:textSize="24sp" />
                 />
