--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="colorYellow">#FFFF00</color>
     <color name="colorBlack">#000000</color>
     <color name="colorLightBlue">#B3E4F5</color>
+    <color name="colorExcursionButton">#9ed8ed</color>
 
     <!-- adding to todo list - change primary, primarydark colors according to the changed background -->
 
